--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "snake",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A snake game written in ES6",
   "main": "main.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
